# aalto-asr-preprocessor

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.md
src/aalto_asr_preprocessor/: __init__.py  __main__.py  console.py  preprocessor.py
src/aalto_asr_preprocessor/fi/: __init__.py  parl_to_kaldi_text.py
src/aalto_asr_preprocessor/fi/numbers/: __init__.py  expansion.py
src/aalto_asr_preprocesssor/: __init__.py  preprocessor.py
src/aalto_asr_preprocesssor/fi/: parl_to_kaldi_text.py
tests/: __init__.py  conftest.py  console_test_input.txt  minimal_test_recipe.py  test_aalto_asr_preprocessor.py  test_console.py  test_main.py
tests/fi/: __init__.py  test_number_expansion.py  test_parl_to_kaldi_text.py
tests/fi/data/: __init__.py  parl_long_test_strings.py
