[tool.poetry]
authors = ["Anja Virkkunen <anja.virkkunen@aalto.fi>"]
description = "Aalto ASR preprocessing tool for preparing texts."
homepage = "https://github.com/aalto-speech/aalto-asr-preprocessor"
keywords = ["aalto", "ASR", "preprocessor"]
license = "MIT"
name = "aalto-asr-preprocessor"
readme = "README.rst"
repository = "https://github.com/aalto-speech/aalto-asr-preprocessor"
version = "2021.6.17"

[tool.poetry.dependencies]
click = "^8.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1"
coverage = {extras = ["toml"], version = "^6.3"}
darglint = "^1.8.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
mypy = "^0.942"
pre-commit = "^2.17.0"
pre-commit-hooks = "^4.1.0"
pytest = "^7.1.1"
reorder-python-imports = "^2.7.1"
safety = "^1.10.3"
sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^3.1.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
aalto-prep = "aalto_asr_preprocessor.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aalto_asr_preprocessor"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
