[tool.poetry]
authors = ["Anja Virkkunen <anja.virkkunen@aalto.fi>"]
description = "Aalto ASR preprocessing tool for preparing texts."
homepage = "https://github.com/aalto-speech/aalto-asr-preprocessor"
keywords = ["aalto", "ASR", "preprocessor"]
license = "MIT"
name = "aalto-asr-preprocessor"
readme = "README.md"
repository = "https://github.com/aalto-speech/aalto-asr-preprocessor"
version = "2022.4.27"

[tool.poetry.dependencies]
click = ">=8.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = ">=22.6"
coverage = {extras = ["toml"], version = ">=6.4"}
darglint = ">=1.8.0"
flake8 = ">=4.0.1"
flake8-bandit = ">=3.0.0"
flake8-bugbear = ">=22.7.1"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.7"
furo = ">=2022.6.21"
isort = ">=5.10.1"
mypy = ">=0.961"
pre-commit = ">=2.20.0"
pre-commit-hooks = ">=4.3.0"
pytest = ">=7.1.2"
safety = ">=2.1.1"
sphinx = ">=5.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=4.3.0"
pyupgrade = ">=2.37.1"

[tool.poetry.scripts]
aalto-prep = "aalto_asr_preprocessor.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["aalto_asr_preprocessor", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
